# pybeepop

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: workflows
.github/workflows/: ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
src/pybeepop/: analysis.py  clean_data.py  eda.py  to_ddl.py
tests/: test_analysis.py  test_clean_data.py  test_eda.py  test_pybeepop.py  test_to_ddl.py
tests/data/original/: average_monthly_temperature_by_state_1950-2022.parquet  save_the_bees.parquet
tests/data/processed/: average_monthly_temperature_by_state_1950-2022.csv  epest_county_estimates.csv  helper.csv  helper__.csv  pollution_2000_2021.csv  save_the_bees.csv  vif.csv
tests/models/: linear_model.pkl
tests/scripts/: output.sql
