[tool.poetry]
name = "pybeepop"
version = "0.1.0"
description = "Assessing the Influence of Pesticide Usage, Parasitic Factors, and Climate on Honey Bee Populations in the United States (2015-2019)"
authors = ["Hanlin Zhao"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.9"
pandas = "2.2.2"
altair = "5.2.0"
seaborn = "0.13.2"
matplotlib = "3.8.3"
statsmodels = "0.14.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
